welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: ')' expected but integer literal found.
	return (if (a>12 && a<20) then 1 else 0) + (if (b>12 && b<20) then 1 else 0) + (if (c>12 && c<20) then 1 else 0) +(if (d>12 && d<20) then 1 else 0)
                                       ^countTeen:2: error: ';' expected but 'else' found.
	return (if (a>12 && a<20) then 1 else 0) + (if (b>12 && b<20) then 1 else 0) + (if (c>12 && c<20) then 1 else 0) +(if (d>12 && d<20) then 1 else 0)
                                                                             ^